# ml-projects-portfolio

./: .gitignore  PROJECTS_OVERVIEW.md
BART/: README.md  model.py  model_hyperopt.py  note.txt  request.py  requirements.txt  serving.py
BART/data/: issue_data.csv
alertmon_app/: README.md  app.py  generate_data.py  pyproject.toml  requirements.txt
alertmon_app/src/alertmon/: __init__.py  classifier.py  features.py  forecast.py  monitor_certs.py  run_alerts_monitor.py  run_certs_monitor.py  run_monitor.py  thresholds.py
alertmon_app/src/scripts/: predict.py  train_models.py
alertmon_app/static/: app.js  chart.js  styles.css
alertmon_app/templates/: index.html
alertmon_app/utils/: servicenow.py
azure_cost_optimizer/: README.md  app.py  env.example  requirements.txt
batchops/: README.md  analyze_file_patterns.py  check_file_arrivals.py  config.ini  generate_test_data.py
bot_app/: README.md  app.py  clu_utility.py  config.json  config.py  dao.py  database.py  dialog_helper.py  file_request_server.py  intents_entities.json  process_user_request_dao.py  requirements.txt  sop_bot.py  user_profile.py  user_profile_dialog.py
clu_utility/: clu_creation.py  clu_deploy.py  clu_testing.py  clu_training.py  clu_utility.py  clu_utility_README.md  training_data.csv
clu_utility/config/: config.json
multi-agents/: README.md  content_agent_output.html  multi-agent-ui2.py  multi-agent-ui3.py
portfolio/: README.md
stock_analysis/: .env  README.md  agent.py  requirements.txt
