[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alertmon"
version = "0.1.0"
description = "Alert Monitoring & Forecasting App"
requires-python = ">=3.9"
dependencies = [
    "flask",
    "pandas",
    "numpy",
    "matplotlib",
    "scikit-learn",
    "statsmodels",
]
